--- a/front/src/pages/login/index.astro
+++ b/front/src/pages/login/index.astro
@@ -2,22 +2,22 @@
 import Layout from '@layouts/Layout.astro';
 ---
 
-<Layout title="Login to your account">
-    <section class="bg-gray-50 dark:bg-gray-900">
-        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
-            <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+<Layout title="Sign in">
+    <section class="block min-h-screen">
+        <div class="p-4 sm:p-6 lg:p-8 h-full">
+            <div class="mx-auto bg-white dark:bg-slate-800 px-8 py-8 rounded-xl shadow">
+                <div class="p-6 space-y-4 md:space-y-6 sm:p-8 max-w-lg mx-auto">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         Sign in to your account
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form id="loginForm" class="space-y-4 md:space-y-6" action="/login" method="POST">
                         <div>
-                            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Your username
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Your email address
                             </label>
-                            <input type="text" name="username" id="username"
+                            <input type="email" name="email" id="email"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                required=true autocomplete="username" />
+                                required=true autocomplete="email" placeholder="john@doe.com" value="john@doe.com" />
                         </div>
 
                         <div>
@@ -25,20 +25,7 @@ import Layout from '@layouts/Layout.astro';
                                 Password
                             </label>
                             <input type="password" name="password" id="password"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password" />
-                        </div>
-
-                        <div class="flex items-center justify-between">
-                            <div class="flex items-start">
-                                <div class="flex items-center h-5">
-                                    <input id="remember" aria-describedby="remember" type="checkbox"
-                                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-                                        required="">
-                                </div>
-                                <div class="ml-3 text-sm">
-                                    <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>
-                                </div>
-                            </div>
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password" placeholder="********" value="password" />
                         </div>
 
                         <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
@@ -56,3 +43,35 @@ import Layout from '@layouts/Layout.astro';
         </div>
     </section>
 </Layout>
+
+<script>
+    // Handle the registration form
+    const loginForm = document.getElementById('loginForm');
+    loginForm?.addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        // Get the form data
+        const formData = new FormData(loginForm as HTMLFormElement);
+        const email = formData.get('email');
+        const password = formData.get('password');
+
+        console.log(email, password)
+
+        // Send the form data to the server
+        const response = await fetch(`${import.meta.env.PUBLIC_API_URL}/login`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ email, password }),
+        });
+
+        // Handle the response
+        if (response.status === 201) {
+            window.location.href = '/cards';
+        } else {
+            const data = await response.json();
+            alert(data.message);
+        }
+    });
+</script>
