--- a/front/src/pages/quizz/index.astro
+++ b/front/src/pages/quizz/index.astro
@@ -2,14 +2,15 @@
 import Layout from '@layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Memories 📚">
+<Layout title="Quizz 📚">
     <section class="block min-h-screen">
         <div class="p-4 sm:p-6 lg:p-8 h-full">
             <div class="mx-auto bg-white dark:bg-slate-800 px-8 py-8 rounded-xl shadow">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8 max-w-lg mx-auto">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white text-center">
-                        This is the Home page
+                        This is the Quizz page
                     </h1>
+
                 </div>
             </div>
         </div>
