--- a/front/src/pages/register/index.astro
+++ b/front/src/pages/register/index.astro
@@ -3,26 +3,42 @@ import Layout from '@layouts/Layout.astro';
 ---
 
 <Layout title="Register">
-    <section class="bg-gray-50 dark:bg-gray-900">
-        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-            <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+    <section class="block min-h-screen">
+        <div class="p-4 sm:p-6 lg:p-8 h-full">
+            <div class="mx-auto bg-white dark:bg-slate-800 px-8 py-8 rounded-xl shadow">
+                <div class="p-6 space-y-4 md:space-y-6 sm:p-8 max-w-lg mx-auto">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                         Create a new account
                     </h1>
-                    <form class="space-y-4 md:space-y-6" action="#">
+                    <form id="registerationForm" class="space-y-4 md:space-y-6" action="/register" method="POST">
+                        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                            <div>
+                                <label for="firstname" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                    Firstname
+                                </label>
+                                <input type="text" name="firstname" id="firstname" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="name" placeholder="John" />
+                            </div>
+
+                            <div>
+                                <label for="lastname" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                    Lastname
+                                </label>
+                                <input type="text" name="lastname" id="lastname" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="family-name" placeholder="Doe" />
+                            </div>
+                        </div>
+
                         <div>
-                            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-                                Your username
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Your email address
                             </label>
-                            <input type="text" name="username" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="username" />
+                            <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="username" placeholder="john@doe.com" />
                         </div>
 
                         <div>
                             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                                 Password
                             </label>
-                            <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password">
+                            <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password" placeholder="********" />
                         </div>
 
                         <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
@@ -41,3 +57,34 @@ import Layout from '@layouts/Layout.astro';
         </div>
     </section>
 </Layout>
+
+<script>
+    // Handle the registration form
+    const registerationForm = document.getElementById('registerationForm');
+    registerationForm?.addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        // Get the form data
+        const formData = new FormData(registerationForm as HTMLFormElement);
+        const email = formData.get('email');
+        const password = formData.get('password');
+
+        // Send the form data to the server
+        const response = await fetch(`${import.meta.env.PUBLIC_API_URL}/register`, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ email, password }),
+        });
+
+        // Handle the response
+        if (response.status === 201) {
+            alert('Account created successfully');
+            window.location.href = '/login';
+        } else {
+            const data = await response.json();
+            alert(data.message);
+        }
+    });
+</script>
