Add swipe to cards

--- a/front/src/layouts/Layout.astro
+++ b/front/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import Navbar from '../components/Navbar.astro';
 	</head>
 	<body>
 		<Navbar />
-		<main class="mt-20">
+		<main class="h-svh w-swh mt-20">
 			<slot />
 		</main>
 	</body>
