--- a/front/src/components/Navbar.astro
+++ b/front/src/components/Navbar.astro
@@ -4,10 +4,10 @@ import BurgerMenu from '@icons/hamburger.astro'
 
 <header class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600 h-20">
     <nav class="mx-4 p-4 flex flex-wrap items-center justify-between h-full">
-        <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="/" class="items-center space-x-3 rtl:space-x-reverse hidden lg:flex">
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Memories 📚</span>
         </a>
-        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+        <div class="flex md:order-2 space-x-3 md:space-x-0 justify-end">
             <a href="/register"
                 class="px-4 py-2 mr-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                 Register
@@ -30,7 +30,7 @@ import BurgerMenu from '@icons/hamburger.astro'
                     <a href="/cards" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500">Cards</a>
                 </li>
                 <li>
-                    <a href="/quizz" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+                    <a href="/quizz" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Quizz</a>
                 </li>
                 <li>
                     <a href="/faq" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">FAQ</a>
