--- a/front/src/pages/login/index.astro
+++ b/front/src/pages/login/index.astro
@@ -17,7 +17,7 @@ import Layout from '@layouts/Layout.astro';
                             </label>
                             <input type="email" name="email" id="email"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                required=true autocomplete="email" placeholder="john@doe.com" value="john@doe.com" />
+                                required=true autocomplete="email" placeholder="john@doe.com" />
                         </div>
 
                         <div>
@@ -25,7 +25,7 @@ import Layout from '@layouts/Layout.astro';
                                 Password
                             </label>
                             <input type="password" name="password" id="password"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password" placeholder="********" value="password" />
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required=true autocomplete="current-password" placeholder="********" />
                         </div>
 
                         <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
@@ -55,8 +55,6 @@ import Layout from '@layouts/Layout.astro';
         const email = formData.get('email');
         const password = formData.get('password');
 
-        console.log(email, password)
-
         // Send the form data to the server
         const response = await fetch(`${import.meta.env.PUBLIC_API_URL}/login`, {
             method: 'POST',
@@ -66,12 +64,15 @@ import Layout from '@layouts/Layout.astro';
             body: JSON.stringify({ email, password }),
         });
 
+
         // Handle the response
-        if (response.status === 201) {
+        if (response.status === 200) {
+            const data = await response.json();
+            localStorage.setItem('token', data.token);
             window.location.href = '/cards';
         } else {
             const data = await response.json();
-            alert(data.message);
+            console.error(data.message);
         }
     });
 </script>
